--- a/css/books.css
+++ b/css/books.css
@@ -23,7 +23,7 @@
 
 .section2 table tr td p{
 	font-size:22px;
-	font-family: Georgia;
+	font-family: monospace;
 	margin-top: 30px;
 	word-spacing: 2px;
 	line-height: 40px;
