--- a/css/about.css
+++ b/css/about.css
@@ -5,7 +5,7 @@
 }
 
 header{
-	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+	background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,1.9)), url(../images/img1.jpg);
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
@@ -44,13 +44,13 @@ header{
 
 .main-nav li a:hover{
 	border: 1px solid white;
-
 }
 
 
 
+
 body{
-	font-family: Georgia;
+	font-family: monospace;
 }
 
 .row{
@@ -69,17 +69,15 @@ body{
 h1{
 	color: white;
 	text-transform: uppercase;
-	font-size: 80px;
+	font-size: 90px;
 	text-align: center;
-	margin-top: 250px;
+	margin-top: 240px;
 	text-shadow: 1px 2px black;
-	font-family: Bangers;
+	font-family: Bell MT;
 	
 }
 
 
-
- 
 .main-nav ul{
 	position: absolute;
 	left: 0px;
@@ -103,77 +101,5 @@ h1{
 	position: relative;
 	padding-top: 17px;
 	
-}
-
-.tops ul li{
-	float: center;
-	list-style: none;
-	margin-top: 30px;
-	position: relative;
-	
-
-
-
-
-}
-
-.tops ul li a:hover{
-	border: 1px solid white;
-
-}
-
-
-.tops li{
-	display: block;
-	font-size: 16px;
-	text-align: center;
-	
-	
-}
-
-.tops ul li a{
-	color: white;
-	text-decoration: none;
-
-}
-
-.section td{
-	margin-top: 100px;
-	color: black;
-	font-size: 50px;
-	font-family: Lora;
-}
-
-.section table{
-	margin-top: 100px;
-	margin-left: 200px;
-
-}
-
-.section table tr td img{
-	margin-left: 350px;
-	margin-right: 200px;
-	margin-bottom: 10px;
-	width: 350px;
-	height:200px;
-}
-
-
-.section table tr td p{
-	font-size:22px;
-	font-family: monospace;
-	margin-top: 30px;
-	word-spacing: 2px;
-	line-height: 40px;
-	margin-right: 180px;
-	text-align: justify;
-	margin-bottom: 150px;
-}
-
-.section table tr td{
-
-} 
-body{
-	background-color: white;
 }
 
