--- a/css/people.css
+++ b/css/people.css
@@ -2,7 +2,7 @@
 	margin-top: 100px;
 	color: black;
 	font-size: 50px;
-	font-family: Timesnewroman;
+	font-family: Lora;
 }
 
 .section1 table{
@@ -22,7 +22,7 @@
 
 .section1 table tr td p{
 	font-size:22px;
-	font-family: Georgia;
+	font-family: monospace;
 	margin-top: 30px;
 	word-spacing: 2px;
 	line-height: 40px;
