--- a/css/tech.css
+++ b/css/tech.css
@@ -22,7 +22,7 @@
 
 .section4 table tr td p{
 	font-size:22px;
-	font-family: Georgia;
+	font-family: monospace;
 	margin-top: 30px;
 	word-spacing: 2px;
 	line-height: 40px;
