--- a/css/youtubers.css
+++ b/css/youtubers.css
@@ -22,7 +22,7 @@
 
 .section3 table tr td p{
 	font-size:22px;
-	font-family: Georgia;
+	font-family: monospace;
 	margin-top: 30px;
 	word-spacing: 2px;
 	line-height: 40px;
@@ -35,5 +35,5 @@
 
 } 
 body{
-	background-color: #E4F4FA;
+	background-color: white;
 }
