--- a/css/nav.css
+++ b/css/nav.css
@@ -50,7 +50,7 @@ header{
 
 
 body{
-	font-family: monospace;
+	font-family: Georgia;
 }
 
 .row{
@@ -141,7 +141,7 @@ h1{
 	margin-top: 100px;
 	color: black;
 	font-size: 50px;
-	font-family: Timesnewroman;
+	font-family: Lora;
 }
 
 .section table{
@@ -161,7 +161,7 @@ h1{
 
 .section table tr td p{
 	font-size:22px;
-	font-family: Georgia;
+	font-family: monospace;
 	margin-top: 30px;
 	word-spacing: 2px;
 	line-height: 40px;
@@ -174,6 +174,6 @@ h1{
 
 } 
 body{
-	background-color: #E4F4FA;
+	background-color: white;
 }
 
